--- a/src/components/Memoji/Memoji.module.scss
+++ b/src/components/Memoji/Memoji.module.scss
@@ -1,14 +1,14 @@
 .memoji {
   min-width: 64px;
-  max-width: 64px;
+  max-width: 128px;
   min-height: 64px;
-  max-height: 64px;
+  max-height: 128px;
   overflow: hidden;
   border-radius: 999px;
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
 
   @media (prefers-color-scheme: dark) {
-    background-color: #2D2D2D;
+    background-color: #2d2d2d;
   }
 
   .image {
