--- a/src/components/VisualGrid/VisualGrid.module.scss
+++ b/src/components/VisualGrid/VisualGrid.module.scss
@@ -11,12 +11,12 @@
 
   span {
     grid-column: span 1;
-    border-left: 1px dashed #EBEBEB;
-    border-right: 1px dashed #EBEBEB;
+    border-left: 1px dashed #ebebeb;
+    border-right: 1px dashed #ebebeb;
 
     @media (prefers-color-scheme: dark) {
-      border-left: 1px dashed #1E1E1E;
-      border-right: 1px dashed #1E1E1E;
+      border-left: 1px dashed #1e1e1e;
+      border-right: 1px dashed #1e1e1e;
     }
   }
 }
